# SecureSeaHorseSIEM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES_v5.0.md  compile_commands.json  generat_sums.sh
certs/: README.md
config/: client.conf  rules.conf  server.conf
config/feeds/: README.md
docs/: DIVERGENCE_LOG.md  PHASE1_CHANGELOG.md  PHASE2_CHANGELOG.md  PHASE3_CHANGELOG.md  PHASE4_CHANGELOG.md  PHASE5_CHANGELOG.md  PHASE6_CHANGELOG.md  PHASES_16_25_CHANGELOG.md  README_DELTA.md  SERVER_INTEGRATION_SNIPPETS.md  USER_MANUAL.md
feeds/: malicious_domains.csv  malicious_hashes.csv  malicious_ips.csv
installer/: install_linux.sh  installer_windows.nsi
scripts/: README.md  generate_certs.sh
src/: alert_engine  client.cpp  client_protocol.h  db_layer.h  regex_engine.h  server.cpp  server_protocol.h
src/client/: client.cpp  client_protocol.h  connection_inventory.h  crypto_utils.h  fim_common.h  fim_scanner.h  process_monitor.h  seahorse_client_v5_additions.h  self_protection.h  software_inventory.h  usb_monitor.h
src/server/: alert_engine.h  baseline_tracker.h  correlation_engine.h  crypto_utils.h  dashboard_html.h  db_layer.h  fim_common.h  fim_monitor.h  fim_scanner.h  fleet_manager.h  hunt_query.h  incident_response.h  mitre_map.h  ml_anomaly.h  network_inspector.h  rbac.h  regex_engine.h  report_generator.h  rest_server.h  server.cpp  server_protocol.h  session_tracker.h  sigma_engine.h  soar_connector.h  syslog_io.h  threat_intel.h  traffic_classifier.h
src/webui/: index.html
